--- a/templates/notes.html
+++ b/templates/notes.html
@@ -3,42 +3,84 @@
 {% block logout %}
 {% endblock logout %}
 <div class="notes_wrap">
-    <h2>NOTES FOR REVIEW OF SECTION 4</h2>
+    <h2>NOTES FOR REVIEW OF SECTION 5</h2>
     <div class="notes">
-
+        <div class="sections">
+        <div class="innerlinks">
+            <h3><a class="ilinks" href="#">Javascript</a></h3>
+            <h3><a class="ilinks" href="#android">Android OS</a> </h3>
+        </div>
+        <h3> <a name="javascript">Javascript</a> </h3>
+        <i>reference links</i>
         <br>
-        <h3>Client/Servers</h3>
+        <a href="http://techterms.com/definition/javascript">Javascript</a>
+        <p> <i>Simplified definition of javascript detailing it's origins and its functionality.</i></p>
+
+        <a href="http://api.jquery.com/">jQuery</a>
+        <p><i>API for a well known library known as jQuery known for its size and feature rich functionality</i></p>
         <p>
-           A Client communicates with a server via sending a <i>get</i> or <i>post</i> command which
-           is then used by the server to respond with the contents of what was asked for.<br>
-           Example:
+            <b>What is javascript</b>
             <ol>
-                 <li>Client communicates with server via a protocol like HTTP.</li>
-                 <li>The Client uses a get request for whatever object it is requesting.</li>
-                 <li>Server takes the request and returns the object that the client has requested.</li>
+                <li>Javascript is an essential ,interpreted, client sided scripting language created in 1995,
+                used for dynamic interaction via on-the-fly calculations performed client side.</li>
+                <li>Javascript is untyped, meaning &quot;any operation can be performed on any data&quot;</li>
+
+                <li>viewed in the browser through developer tools, such as Firefox firebug or google Chrome
+                Developer tools.</li>
+
             </ol>
-        </p>
-        <h3>Validation</h3>
-        <p>
-            Validation is extremely important in this day and age, especially on the web. Without Validation
-            there would be no security on websites. Validating a users input is important for several reasons.
-           <ol>
-                <li>Users can enter malicious code which can change the way a website works</li>
-                <li>Import information stored on a server (credit card info, SSN, ect) could easily be compromised</li>
-                <li>Without proper authentication and validation the web would not be a safe place.</li>
-           </ol>
-        </p>
-        <h3>HTML Templates</h3>
-        <p>
-            I've used python/Django several times in the past, and I can say, without a doubt that templating is
-            probably the most powerful way to save a ton of time, or rather keep yourself DRY. HTML templates can
-            make what would normally be a very difficult job much easier to complete.
+
+            <b>What it is not</b>
             <ol>
-                <li>You create one base template and then extend on that</li>
-                <li>It limits the amount of html/code that you have type</li>
-                <li>To change headers or footers all you do is change the base template.</li>
+                <li>JS is not Java, although it takes much of its syntax from that language and Java's ancestor C.</li>
+                <li>JS is not a server sided language, as all the processing takes place on the client side.</li>
+                <li>JS is not a class based  Object Oriented programming language, although it does use prototyping</li>
             </ol>
+
+             <b>Frameworks</b>
+            <ol>
+                <li><a href="http://jquery.com/">jQuery</a></li>
+                <li><a href="https://angularjs.org/">AngularJS</a></li>
+                <li><a href="http://backbonejs.org/">Backbone</a></li>
+                <li><a href="https://facebook.github.io/react/">React</a></li>
+            </ol>
+        </div>
+
+
         </p>
+
+        <div class="sections">
+            <div class="innerlinks">
+            <h3><a class="ilinks" href="#javascript">Javascript</a></h3>
+            <h3><a class="ilinks" href="#android">Android OS Development (mobile)</a> </h3>
+        </div>
+         <h3> <a name="android">Android OS</a> </h3>
+
+        <i>reference links</i>
+        <br>
+        <a href="http://developer.android.com/tools/workflow/index.html">Android Flow Design</a>
+            <p><i>And introduction to the basic workflow of developing apps. this also helped me greatly in
+            deciding to pursue the Udacity nanodegree to become a Android app developer!</i></p>
+
+        <a href="https://www.android.com/history/#/marshmallow">Android History</a>
+            <p><i>A neat interactive and informative journey through the history of the Android OS</i></p>
+         <p>
+        <b>What is Android OS?</b>
+            <ol>
+                <li>Android OS is unique in that it is primarily designed for mobile devices, though it is also used on
+                less mobile devices such as televisions.</li>
+                <li>Android was initially designed in 2005 by the now defunct <i>Android Inc.</i> Later the product was
+                bought by Google and released in 2007.</li>
+                <li>Android is also unique (unlike the well known fruit phone) in that it's operating system, at its core,
+                is open source, although proprietary software is normally developed on top of it.</li>
+                <li>&quot;Android is popular with technology companies that require a ready-made, low-cost and customizable
+                    operating system for high-tech devices.&quot;</li>
+            </ol>
+
+
+
+        </p>
+        </div>
     </div>
 </div>
 
