--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
             <link rel="stylesheet" type="text/css" href="css/main.css">
             <link rel="stylesheet" type="text/css" href="css/forum.css">
             <link href='https://fonts.googleapis.com/css?family=Cinzel|Open+Sans' rel='stylesheet' type='text/css'>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+            <script src=""></script>
+            <script src="js/forum.js"></script>
+
         {% endblock %}
     </head>
     <body>
@@ -69,6 +73,7 @@
                             <li><a href="notes.html">NOTES</a></li>
                             <li><a href="definitions.html">DEFINITIONS</a></li>
                             <li><a href="register.html" >REGISTER</a></li>
+                            <li><a href="dice.html">DICE</a></li>
 
                     {% endblock %}
                         </ul>
