# added dice game # # updated forum layout # # modified dice game using less code #

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,12 +7,13 @@
         {% block head %}
             <link rel="stylesheet" type="text/css" href="css/main.css">
             <link rel="stylesheet" type="text/css" href="css/forum.css">
+            <link rel="stylesheet" type="text/css" href="css/dice.css">
             <link href='https://fonts.googleapis.com/css?family=Cinzel|Open+Sans' rel='stylesheet' type='text/css'>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-            <script src=""></script>
-            <script src="js/forum.js"></script>
+            <script src="js/dice.js"></script>
 
-        {% endblock %}
+
+        {% endblock head %}
     </head>
     <body>
         
@@ -29,51 +30,27 @@
                     {% if login %}
                     <div class="welcome">
                         <div id='inner_welcome'> Welcome {{ user }}</div>
-                        
-                        <img class="micro_image"src='{{ u_image }}'>
+                        <img class="micro_image" src='{{ u_image }}'>
+                        {% endif %}
                         {% block logout %}
-                        <form method='post' action='#' class='logout'>
+                        <form method='post' action='/login.html' class='logout'>
                             <input type='hidden' name='logout'>
-                            <!-- will implement javascript button for lesson 5 -->
-                            <!-- currently button only "works" on Home link -->
                             <input id='js_logout' type='submit' value='logout' onclick=''>
                         </form>
-                        {% endblock logout %}
+
                     </div>
-                    {% else %}
-                    
-                    <div class ="login">
-                        
-                        <form method="post" action="/">
-                        <table>
-                            <tr>
-                                <td><label>User:</label></td>
-                                <td><input type="text" name="username"></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td><label>Pass:</label></td>
-                                <td><input type="password" name="password"></td>
-                                <td><input type="submit" value="login"></td>
-                            </tr>        
-                        </table>
-                    </form>
-                        
-                    {% endif %}
-                    </div>
+                    {% endblock logout %}
                     {% endblock login %}
-            {% endblock %}
+                    {% endblock header %}
+                    
+
+
             </div>
                 <div class="ulnav">
                     {% block navigation %}
                         <ul class='navs'>
 
-                            <!--<li><a href="/">HOME</a></li>-->
-                            <!--<li><a href="forum.html">FORUM</a></li>-->
-                            <!--<li><a href="notes.html">NOTES</a></li>-->
-                            <!--<li><a href="definitions.html">DEFINITIONS</a></li>-->
-                            <!--<li><a href="register.html" >REGISTER</a></li>-->
-                            <!--<li><a href="dice.html">DICE</a></li>-->
+
 
                             {% for navs in navs_list %}
 
