--- a/templates/notes.html
+++ b/templates/notes.html
@@ -8,17 +8,31 @@
         <div class="sections">
         <div class="innerlinks">
             <h3><a class="ilinks" href="#">Javascript</a></h3>
-            <h3><a class="ilinks" href="#android">Android OS</a> </h3>
+
         </div>
         <h3> <a name="javascript">Javascript</a> </h3>
-        <i>reference links</i>
-        <br>
-        <a href="http://techterms.com/definition/javascript">Javascript</a>
-        <p> <i>Simplified definition of javascript detailing it's origins and its functionality.</i></p>
+        <i>reference link </i><a href="https://en.wikipedia.org/wiki/JQuery">jQuery</a>
 
-        <a href="http://api.jquery.com/">jQuery</a>
-        <p><i>API for a well known library known as jQuery known for its size and feature rich functionality</i></p>
         <p>
+            API for a well known library known as jQuery known for its size and feature rich functionality.
+            jQuery is known for it's simplification of the javascript language, allowing for less code to
+            create interactivity and functionality. jQuery is free and as well as being an open source language(MIT)
+            allowing for plugins that can be created on top of the library. Additionally jQuery allows for powerful
+            dynamic web pages and web applications to be easily and quickly crafted per its <i>DOM</i> manipulation.
+
+
+        </p>
+        <p>
+        <br>
+        <i>reference link </i><a href="http://techterms.com/definition/javascript">Javascript</a>
+        <p> <i>Simplified definition of javascript detailing it's origins and its functionality.</i>
+            Javascript was developed by Netscape in order to add more dynamic content, as well as
+            interactive elements. Though Javascript has the word &quot;Java&quot; in its namesake, it is not Java,
+            though it is influenced by it in its syntax as well as being partially based on
+            <a href="http://www.ecmascript.org/docs.php">ECMAScript</a>.
+        </p>
+
+
             <b>What is javascript</b>
             <ol>
                 <li>Javascript is an essential ,interpreted, client sided scripting language created in 1995,
@@ -34,7 +48,7 @@
             <ol>
                 <li>JS is not Java, although it takes much of its syntax from that language and Java's ancestor C.</li>
                 <li>JS is not a server sided language, as all the processing takes place on the client side.</li>
-                <li>JS is not a class based  Object Oriented programming language, although it does use prototyping</li>
+                <li>JS is not a true class based Object Oriented programming language, although it does use prototyping.</li>
             </ol>
 
              <b>Frameworks</b>
@@ -47,40 +61,8 @@
         </div>
 
 
-        </p>
-
-        <div class="sections">
-            <div class="innerlinks">
-            <h3><a class="ilinks" href="#javascript">Javascript</a></h3>
-            <h3><a class="ilinks" href="#android">Android OS Development (mobile)</a> </h3>
-        </div>
-         <h3> <a name="android">Android OS</a> </h3>
-
-        <i>reference links</i>
-        <br>
-        <a href="http://developer.android.com/tools/workflow/index.html">Android Flow Design</a>
-            <p><i>And introduction to the basic workflow of developing apps. this also helped me greatly in
-            deciding to pursue the Udacity nanodegree to become a Android app developer!</i></p>
-
-        <a href="https://www.android.com/history/#/marshmallow">Android History</a>
-            <p><i>A neat interactive and informative journey through the history of the Android OS</i></p>
-         <p>
-        <b>What is Android OS?</b>
-            <ol>
-                <li>Android OS is unique in that it is primarily designed for mobile devices, though it is also used on
-                less mobile devices such as televisions.</li>
-                <li>Android was initially designed in 2005 by the now defunct <i>Android Inc.</i> Later the product was
-                bought by Google and released in 2007.</li>
-                <li>Android is also unique (unlike the well known fruit phone) in that it's operating system, at its core,
-                is open source, although proprietary software is normally developed on top of it.</li>
-                <li>&quot;Android is popular with technology companies that require a ready-made, low-cost and customizable
-                    operating system for high-tech devices.&quot;</li>
-            </ol>
 
 
-
-        </p>
-        </div>
     </div>
 </div>
 
